# HttpFileServerLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HttpFileServerLib.cpp  HttpFileServerLib.h  HttpFileServerRunnable.cpp  HttpFileServerRunnable.h  IHttpFileServer.h  IHttpResult.h  README.md  httplib.cpp  httplib.h  macro.h  main.cpp  vcpkg.json
